--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dream Travel Agency</title>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
@@ -19,7 +19,6 @@
                      class="logo">
             </figure>
                 
-           <div class="menu-toggle">&#9776;</div> 
             
             <!-- Navigation -->
             <nav>
