Finals changes in all pages now

--- a/about us.html
+++ b/about us.html
@@ -1,84 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dream Travel Agency</title>
-    <link rel="stylesheet" href="aboutus style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>About Us - Dream Travel Agency</title>
+<link rel="stylesheet" href="aboutus style.css">
 </head>
 <body>
-<header>
-    <h1> DREAM TRAVEL <br><span> AND TOUR AGENCY </span></h1>
-        <nav>
-            <a href="home.html">Home</a>
-            <a href="about us.html" class="active">About Us</a>
-            <a href="services.html">Our Services</a>
-            <a href="tour.html">Tours</a>
-            <a href="index.html">Contact Us</a>
-            <a href="faq.html">FAQ</a>
-            <a href="blog page.html">Blog</a>
-        </nav>
+
+<header class="top-header">
+  <h1>About Us</h1>
+  <p>Discover our story and what drives us</p>
 </header>
-<main>
-    <section class="hero">
-        <img src="Images/Dream Travel Agency pic.png" alt="Dream Travel Agency">
-        
-    </section>
-    <section class="why">
-        <h1>Why Choose Us? </h1>
-        <p>
-            Because we combine local expertise, reliable service, and a commitment
-            to making every ride smooth and stress-free.
-        </p>
-        <section class="transport">
-            <img src="Images/bus image2.jpg" alt="Dream Travel Agency">
-        </section>
-        <article>
-            <h2> Reliability & Safety </h2>
-            <p>
-                Every Vehicle in our fleet is maintained to the highest standards
-                with professional and courteous drivers.
-            </p>
-            <h2> Customized Solutions</h2>
-            <p>
-                From group tours to specialized charters, 
-                we tailor our services to fit your unique 
-                requirements.
-            </p>
-            <h2> Community-Focused</h2>
-            <p>
-                Proudly serving Calgary and neighbouring 
-                communities, we're more than a transportation
-                company; we're a trusted neighbourhood partner.
-            </p>
-        <section class="travel">
-            <img src="Images/bus image.jpg" alt="Luxury Buses">
-        </section>
-        </article>
-        <article>
-            <h3> Customized Solutions</h3>
-            <p> 
-                From group tours to specialized charters, we tailor our Services
-                to fit our unique requirements.
-            </p>
-        </article>
-    </section>
-    <section class="about">
-        <h2> Get to Know us</h2>
-        <p> 
-            Dream Travel and Tour Agency is a locally owned and operated company,
-            rooted in a history of reliable and customer-focused transportation.
-            We believe every ride should be more than just a trip.
-        </p>
-        <p> 
-            With Deep ties to the community, we proudly support local events, 
-            schools, and businesses while delivering exceptional service.
-        </p>
-    </section>
+
+<main class="about-main">
+
+  <section class="mission">
+    <h2>Our Mission</h2>
+    <p>To provide unforgettable travel experiences while making every journey seamless, safe, and full of joy.</p>
+  </section>
+
+  <section class="story">
+    <h2>Our Story</h2>
+    <p>Founded in 2020, Dream Travel Agency started with a small team passionate about exploring the world. Our goal is to make world-class travel accessible to everyone.</p>
+  </section>
+
+  <section class="team">
+    <h2>Meet the Team</h2>
+    <div class="team-members">
+      <div class="team-card">
+        <img src="images/person1.jpg" alt="John Doe">
+        <h3>John Doe</h3>
+        <p>Founder & CEO</p>
+      </div>
+      <div class="team-card">
+        <img src="images/person2.jpg" alt="Sarah Khan">
+        <h3>Sarah Khan</h3>
+        <p>Tour Manager</p>
+      </div>
+      <div class="team-card">
+        <img src="images/person3.jpg" alt="Ali Raza">
+        <h3>Ali Raza</h3>
+        <p>Customer Relations</p>
+      </div>
+    </div>
+  </section>
+
 </main>
-<footer>
-    <p> © 2025 Travel and Tour Agency. All Rights Reserved.</p>
+
+<footer class="footer">
+  <h3>Follow Us</h3>
+  <p>&copy; 2025 Dream Travel Agency | All Rights Reserved</p>
 </footer>
-    
+
 </body>
 </html>
