--- a/contact us.html
+++ b/contact us.html
@@ -1,106 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
-    <link rel="stylesheet" href="contactus style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Contact Us - Dream Travel Agency</title>
+<link rel="stylesheet" href="contactus style.css">
 </head>
-<header>
-    <h1> DREAM TRAVEL <br><span> AND TOUR AGENCY </span></h1>
-        <nav>
-            <a href="home.html">Home</a>
-            <a href="about us.html">About Us</a>
-            <a href="services.html">Our Services</a>
-            <a href="tour.html">Tours</a>
-            <a href="contact us.html" class="active">Contact Us</a>
-            <a href="faq.html">FAQ</a>
-            <a href="blog page.html">Blog</a>
-        </nav>
-</header>
 <body>
-    <h1>CONTACT US</h1>
-    <p> Feel free to contact us with any Questions or Concerns. You can use </p> 
-    <p> the form on our website or email us directly. We appreciate your </p>
-    <p>    interest and look forward to hear from you.</p>
-    <label>Name</label>
-    <br>
-    <input type="text" placeholder="Enter Your Name">
-    <br><br>
-    <label>Your Email*</label>
-    <br>
-    <input type="text" placeholder="Your email address">
-    <br><br>
-    <label>Message*</label>
-    <br>
-    <input type="text" placeholder="Enter your message">
-    <br>
-    <form action="/submit-page" method="POST">
-        <label>
-            <input type="checkbox" name="terms" value="agreed" required>
-            I have read the Privacy Policy and Terms and Conditions.
-        </label>
-        <br>
-        <button type="submit">Submit</button>
+
+<header class="top-header">
+  <h1>Contact Us</h1>
+  <p>We’d love to hear from you!</p>
+</header>
+
+<main class="contact-main">
+  <section class="contact-info">
+    <div class="info-card">
+      <h2>Email</h2>
+      <p>dreamtravel@gmail.com</p>
+    </div>
+    <div class="info-card">
+      <h2>Phone</h2>
+      <p>+92 300 1234567</p>
+    </div>
+    <div class="info-card">
+      <h2>Address</h2>
+      <p>123 Dream Street, Islamabad, Pakistan</p>
+    </div>
+  </section>
+
+  <section class="contact-form">
+    <form>
+      <input type="text" placeholder="Your Name" required>
+      <input type="email" placeholder="Your Email" required>
+      <textarea placeholder="Your Message" rows="6" required></textarea>
+      <button type="submit">Send Message</button>
     </form>
-    <section class="info-section">
-    <article class="box">
-            <h2> Contacts</h2>
-            <p> info@dreamtravelagency.com</p>
-            <p>+1 587-997-3169</p>
-    </article>
-    <article class="box">
-        <h3>Address</h3>
-        <p>3730 108 Ave NE #1141,</p>
-        <p>Calgary, AB T3N 1v9</p>
-    </article>
-    <article class="box">
-        <h3> Opening Hours </h3>
-        <p> Monday-Friday: 7am-7pm </p>
-        <p> Saturday: 9am-5pm </p>
-        <p> Sunday: 9am-5pm </p>
-    </article>
-</section>
-<footer>
-    <section class="footer-content">
-        <article class="explore">
-            <h3>Explore</h3>
-            <p> Discover amazing tours with exclusive
-                 offers today! </p>
-                 <nav>
-                    <a href="home.html">Home</a>
-                    <a href="about us.html">About Us</a>
-                    <a href="services.html">Our Services</a>
-                    <a href="tour.html">Tours</a>
-                 </nav>
-        </article>
-        <article class="contact">
-            <h3> CONTACT</h3>
-            <p>info@dreamtravelagency.com</p>
-            <p>+1 587-997-3169</p>
-            <p class="icons">
-                <span>f</span>
-                <span>in</span>
-                <span>X</span>
-            </p>
-        </article>
-        <article class="review">
-            <h3>Give Us A Review</h3>
-            <form>
-                <input type="email" placeholder="your email for updates">
-                <button type="submit">Subscribe for Tour  Updates</button>
-            </form>
-        </article>
-    </section>
-    <section class="cookies">
-        <p> This Website uses cookies to provide 
-            necessary site functionality
-            and to improve your experience. By using 
-            this website, you agree
-            to use our cookies.
-        </p>
-        <button>Accept</button>
-    </section>
+  </section>
+</main>
+
+<footer class="footer">
+  <h3>Follow Us</h3>
+  <p>&copy; 2025 Dream Travel Agency | All Rights Reserved</p>
 </footer>
 
 </body>
