--- a/services.html
+++ b/services.html
@@ -3,28 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Srvices</title>
+    <title>Our Services | Dream Travel Agency</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="media.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-   <header>
-    <h1>Our Services</h1>
-   </header>
-   <main>
-        <article>
-            <img src="images/image.jpg" alt="">
+
+    <!-- Header -->
+    <header>
+        <h1>Our Services</h1>
+    </header>
+
+    <!-- Services Section -->
+    <main>
+        <article class="service-card">
+            <img src="images/image.jpg" alt="Tour Packages">
             <h3>Tour Packages</h3>
             <hr>
             <p>Domestic & International Trips</p>
             <figure>
-                <a href="images/tour.html">
-                 <h5><a href="tour.html">Learn More</a></h5>   
-                </a>
+                <h5><a href="tour.html">Learn More</a></h5>
             </figure>
         </article>
-        <article id="box1">
-            <img src="images/hotel.jpg" alt="">
+
+        <article class="service-card">
+            <img src="images/hotel.jpg" alt="Hotel Booking">
             <h3>Hotel Booking</h3>
             <hr>
             <p>Best Deals on Hotels & Resorts</p>
@@ -32,8 +35,9 @@
                 <h5><a href="contact us.html">Contact Us</a></h5>
             </figure>
         </article>
-        <article id="box2">
-            <img src="images/t.jpg" alt="">
+
+        <article class="service-card">
+            <img src="images/t.jpg" alt="Transportation Services">
             <h3>Transportation Services</h3>
             <hr>
             <p>Airport Transfer & Car Rentals</p>
@@ -41,8 +45,9 @@
                 <h5><a href="contact us.html">Contact Us</a></h5>
             </figure>
         </article>
-        <article id="box3">
-            <img src="images/visa.webp" alt="">
+
+        <article class="service-card">
+            <img src="images/visa.webp" alt="Visa Assistance">
             <h3>Visa Assistance</h3>
             <hr>
             <p>Visa Guidance & Processing</p>
@@ -50,17 +55,19 @@
                 <h5><a href="contact us.html">Contact Us</a></h5>
             </figure>
         </article>
-        <article id="box4">
-            <img src="images/khana kaba.jpeg" alt="">
+
+        <article class="service-card">
+            <img src="images/khana kaba.jpeg" alt="Hajj & Umrah Packages">
             <h3>Hajj & Umrah Packages</h3>
             <hr>
-            <p>Affortable Hajj & Umrah Tours</p>
+            <p>Affordable Hajj & Umrah Tours</p>
             <figure>
-                   <h5><a href="contact us.html">Contact Us</a></h5>
+                <h5><a href="contact us.html">Contact Us</a></h5>
             </figure>
         </article>
-        <article id="box5">
-            <img src="images/customer.png" alt="">
+
+        <article class="service-card">
+            <img src="images/customer.png" alt="24/7 Customer Support">
             <h3>24/7 Customer Support</h3>
             <hr>
             <p>We're Here For You Anytime</p>
@@ -69,5 +76,6 @@
             </figure>
         </article>
     </main>
+
 </body>
 </html>
